Corrections to launch generation and widgetset compilation (and some related refactoring) for Vaadin 7 (#9488)
git-svn-id: https://dev.vaadin.com/svn/integration/eclipse@24413 de684a11-831f-0410-ab27-cb86445eb682